--- a/package.json
+++ b/package.json
@@ -1,6 +1,5 @@
 {
   "name": "@ultimate-market-hub/market-hub-components-library",
-  "private": true,
   "version": "0.0.1",
   "files": [
     "dist",
@@ -35,6 +34,7 @@
     "@heroicons/react": "^2.0.18",
     "@tanstack/match-sorter-utils": "^8.8.4",
     "@tanstack/react-table": "^8.9.3",
+    "@ultimate-market-hub/tailwind-preset": "^0.0.2",
     "axios": "^0.27.2",
     "classnames": "^2.3.2",
     "i18next": "^21.6.14",
@@ -97,6 +97,5 @@
     "vite-plugin-svgr": "^3.3.0",
     "vite-tsconfig-paths": "^4.2.0",
     "vitest": "^0.34.6"
-  },
-  "packageManager": "yarn@4.0.2"
+  }
 }
