--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "react": "^18.2.0",
     "react-dom": "18.2.0",
     "react-dropzone": "^14.2.3",
+    "react-helmet": "^6.1.0",
     "react-hook-form": "^7.45.2",
     "react-i18next": "^12.0.0",
     "react-router-dom": "^6.20.1",
@@ -69,6 +70,7 @@
     "@testing-library/user-event": "^14.4.3",
     "@types/i18next": "^13.0.0",
     "@types/node": "^20.8.10",
+    "@types/react-helmet": "^6.1.11",
     "@typescript-eslint/eslint-plugin": "^6.7.5",
     "@typescript-eslint/parser": "^6.7.5",
     "@vitejs/plugin-react": "^4.0.3",
