--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
   "devDependencies": {
     "@apollo/client": "^3.8.8",
     "@heroicons/react": "^2.0.18",
+    "@ianvs/prettier-plugin-sort-imports": "^4.0.2",
     "@storybook/addon-a11y": "^7.6.3",
     "@storybook/addon-essentials": "^7.6.3",
     "@storybook/addon-interactions": "^7.6.3",
