--- a/package.json
+++ b/package.json
@@ -32,9 +32,10 @@
     "@apollo/client": "^3.8.8",
     "@headlessui/react": "^1.7.17",
     "@heroicons/react": "^2.0.18",
+
     "@tanstack/match-sorter-utils": "^8.8.4",
     "@tanstack/react-table": "^8.9.3",
-    "@ultimate-market-hub/tailwind-preset": "^0.0.2",
+    "@ultimate-market-hub/tailwind-preset": "^0.0.3",
     "axios": "^0.27.2",
     "classnames": "^2.3.2",
     "i18next": "^21.6.14",
@@ -62,6 +63,7 @@
     "@storybook/test": "^7.6.3",
     "@storybook/test-runner": "^0.16.0",
     "@storybook/theming": "^7.6.3",
+    "@tailwindcss/typography": "^0.5.10",
     "@tailwindcss/aspect-ratio": "^0.4.2",
     "@tailwindcss/container-queries": "^0.1.1",
     "@tailwindcss/forms": "^0.5.4",
@@ -88,8 +90,8 @@
     "i18next-parser": "^8.9.0",
     "jsdom": "^22.1.0",
     "lint-staged": "^13.2.3",
-    "prettier": "^3.1.1",
-    "prettier-plugin-tailwindcss": "^0.5.9",
+    "prettier": "^2.8.3",
+    "prettier-plugin-tailwindcss": "^0.4.1",
     "serve": "^14.2.1",
     "start-server-and-test": "^2.0.3",
     "storybook": "^7.6.3",
