--- a/package.json
+++ b/package.json
@@ -32,7 +32,6 @@
     "@apollo/client": "^3.8.8",
     "@headlessui/react": "^1.7.17",
     "@heroicons/react": "^2.0.18",
-
     "@tanstack/match-sorter-utils": "^8.8.4",
     "@tanstack/react-table": "^8.9.3",
     "@ultimate-market-hub/tailwind-preset": "^0.0.3",
@@ -103,7 +102,7 @@
     "vite-tsconfig-paths": "^4.2.0",
     "vitest": "^0.34.6"
   },
-  "main": "index.js",
+  "main": "src/index.ts",
   "repository": "git@github.com:Ultimate-Market-Hub/market-hub-common-react-components.git",
   "author": "Hill Matthew <matthill8286@gmail.com>",
   "license": "MIT"
