--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@ultimate-market-hub/market-hub-components-library",
-  "version": "0.0.16",
+  "version": "0.0.17",
   "files": [
     "dist",
     "i18next-parser/JSONLexer.js "
@@ -47,7 +47,8 @@
     "react-hook-form": "^7.45.2",
     "react-i18next": "^12.0.0",
     "react-router-dom": "^6.20.1",
-    "typescript": "^5.2.2"
+    "typescript": "^5.2.2",
+    "vite": "^4.5.0"
   },
   "devDependencies": {
     "@apollo/client": "^3.8.8",
@@ -99,9 +100,9 @@
     "storybook": "^7.6.3",
     "tailwindcss": "^3.3.3",
     "typescript": "^5.2.2",
-    "vite": "^4.5.0",
     "vite-plugin-dts": "^3.3.1",
     "vite-plugin-svgr": "^3.3.0",
+    "vite-plugin-vercel": "^2.0.0",
     "vite-tsconfig-paths": "^4.2.0",
     "vitest": "^0.34.6"
   },
