--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
   },
   "type": "module",
   "types": "./dist/src/index.d.ts",
-  "source": "src/index.js",
+  "source": "src/index.ts",
   "main": "dist/market-hub-components-library.js",
   "module": "./dist/market-hub-components-library.js",
   "scripts": {
