--- a/src/vercel.json
+++ b/src/vercel.json
@@ -4,5 +4,5 @@
   "devCommand": "yarn storybook",
   "installCommand": "yarn",
   "framework": "vite",
-  "outputDirectory": "./storybook-static"
+  "public": false
 }
