--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@ultimate-market-hub/market-hub-components-library",
-  "version": "0.0.21",
+  "version": "0.0.22",
   "type": "module",
   "types": "./dist/src/index.d.ts",
   "module": "./dist/market-hub-components-library.js",
@@ -40,19 +40,6 @@
     "@apollo/client": "^3.8.8",
     "@headlessui/react": "^1.7.17",
     "@heroicons/react": "^2.0.18",
-    "@tanstack/match-sorter-utils": "^8.8.4",
-    "@tanstack/react-table": "^8.9.3",
-    "@ultimate-market-hub/tailwind-preset": "^0.0.3",
-    "axios": "^0.27.2",
-    "classnames": "^2.3.2",
-    "i18next": "^21.6.14",
-    "react": "^18.2.0",
-    "react-dom": "18.2.0",
-    "react-dropzone": "^14.2.3",
-    "react-helmet": "^6.1.0",
-    "react-hook-form": "^7.45.2",
-    "react-i18next": "^12.0.0",
-    "react-router-dom": "^6.20.1",
     "@ianvs/prettier-plugin-sort-imports": "^4.0.2",
     "@storybook/addon-a11y": "^7.6.3",
     "@storybook/addon-essentials": "^7.6.3",
@@ -70,6 +57,8 @@
     "@tailwindcss/forms": "^0.5.4",
     "@tailwindcss/typography": "^0.5.10",
     "@tanstack/eslint-plugin-query": "^5.12.1",
+    "@tanstack/match-sorter-utils": "^8.8.4",
+    "@tanstack/react-table": "^8.9.3",
     "@testing-library/jest-dom": "^6.1.2",
     "@testing-library/react": "^14.0.0",
     "@testing-library/user-event": "^14.4.3",
@@ -78,7 +67,10 @@
     "@types/react-helmet": "^6.1.11",
     "@typescript-eslint/eslint-plugin": "^6.7.5",
     "@typescript-eslint/parser": "^6.7.5",
+    "@ultimate-market-hub/tailwind-preset": "^0.0.3",
     "@vitejs/plugin-react": "^4.0.3",
+    "axios": "^0.27.2",
+    "classnames": "^2.3.2",
     "eslint": "^8.24.0",
     "eslint-config-prettier": "^8.5.0",
     "eslint-import-resolver-typescript": "^3.6.1",
@@ -88,22 +80,30 @@
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-testing-library": "^6.2.0",
     "husky": "^8.0.3",
+    "i18next": "^21.6.14",
     "i18next-parser": "^8.9.0",
     "jsdom": "^22.1.0",
     "lint-staged": "^13.2.3",
     "prettier": "^2.8.3",
     "prettier-plugin-tailwindcss": "^0.4.1",
+    "react": "^18.2.0",
+    "react-dom": "18.2.0",
+    "react-dropzone": "^14.2.3",
+    "react-helmet": "^6.1.0",
+    "react-hook-form": "^7.45.2",
+    "react-i18next": "^12.0.0",
+    "react-router-dom": "^6.20.1",
     "serve": "^14.2.1",
     "start-server-and-test": "^2.0.3",
     "storybook": "^7.6.3",
     "tailwindcss": "^3.3.3",
+    "typescript": "^5.2.2",
+    "vite": "^4.5.0",
     "vite-plugin-dts": "^3.3.1",
     "vite-plugin-svgr": "^3.3.0",
     "vite-plugin-vercel": "^2.0.0",
     "vite-tsconfig-paths": "^4.2.0",
-    "vitest": "^0.34.6",
-    "typescript": "^5.2.2",
-    "vite": "^4.5.0"
+    "vitest": "^0.34.6"
   },
   "exports": {
     ".": {
